# my_project_test

./: .pre-commit-config.yaml  liquibase.properties  pyproject.toml
.github/workflows/: .gitlab-ci.yml
db/changelog/: db.changelog-master.yaml
src/my_project_test/: migration_script.sql  script.py  test_connection.py  test_script.py
tests/: test_task.py
